fix(ui): Video in portrait mode exceeds height and is cut off at bottom (#191)

--- a/ui/src/components/media-player.sass
+++ b/ui/src/components/media-player.sass
@@ -8,7 +8,7 @@ $max-z-index : 5900
 
   &--player
     width: 100%
-    //height: 100% // can't be for no-controls-overlay
+    height: auto
     vertical-align: bottom
     align-self: flex-end
 
